--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,12 +9,12 @@
         font-weight: 300;
         font-style: normal;
     }
-    /*@font-face {*/
-    /*    font-family: 'Neue Bold';*/
-    /*    src: url('../fonts/HelveticaNeueLight.otf') format('opentype');*/
-    /*    font-weight: 300;*/
-    /*    font-style: normal;*/
-    /*}*/
+    @font-face {
+        font-family: 'Rotunda';
+        src: url('../fonts/rotunda.ttf') format('truetype');
+        font-weight: 400;
+        font-style: normal;
+    }
     @font-face {
         font-family: 'Scriptorama';
         src: url('../fonts/scriptorama.ttf') format('truetype');
@@ -51,6 +51,6 @@ body {
 
 @layer utilities {
     .text-balance {
-        text-wrap: balance;
+        /*text-wrap: balance;*/
     }
 }
